# C-TEA5767-RP2040

./: .gitignore  CMakeLists.txt  README.md  tea5767_i2c.c  tea5767_i2c.h
example/: radio.c
include/: tea5767_i2c.h
radio/: CMakeLists.txt  radio.c
src/: CMakeLists.txt
tea5767_i2c/: CMakeLists.txt  tea5767_i2c.c  tea5767_i2c.h
test/: CMakeLists.txt  tea5767_i2c_test.c  tea5767_i2c_test.cpp  tea5767_i2c_test_mockup.c
test/tea5767_i2c_mockup/: CMakeLists.txt  tea5767_i2c_mockup.c  tea5767_i2c_mockup.h
tests/: gpio.h  i2c.h
